--- a/gb/21/8/18/n13170054.md
+++ b/gb/21/8/18/n13170054.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eaxlwu3579/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eaxlwu3579/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eaxlwu3579/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eaxlwu3579/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eaxlwu3579/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>陈思敏：中共拿下阿富汗最大铜矿项目的秘辛</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13170166-GettyImages-1234688073-.jpeg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2021年08月18日讯】8月16日<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>变天，<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E5%A1%94%E5%88%A9%E7%8F%AD.md#1">塔利班</a>士兵当天进入阿富汗首都<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E5%96%80%E5%B8%83%E5%B0%94.md#1">喀布尔</a>，他们不仅夺取了阿富汗政府的控制权，还掌握了阿富汗大量矿藏的控制权，而这些矿产资源可以说令中共垂涎已久。</p>
-<p>如众所周知的，早在2007年11月，中共央企中国冶金科工集团（<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E4%B8%AD%E5%86%B6%E9%9B%86%E5%9B%A2.md#1">中冶集团</a>，MCC）宣布，<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>政府向中冶发出了艾娜克（Aynak）<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E9%93%9C%E7%9F%BF.md#1">铜矿</a>投标专案中标通知，中冶取得了艾娜克铜矿100%的矿权。</p>
-<p>公开信息显示，艾娜克是阿富汗最大、世界级特大型的<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E9%93%9C%E7%9F%BF.md#1">铜矿</a>。中冶艾娜克合同写下了阿富汗最大的矿产开采协议。在此之际，值得回顾<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E4%B8%AD%E5%86%B6%E9%9B%86%E5%9B%A2.md#1">中冶集团</a>取得艾娜克铜矿的一些经过或内幕。</p>
+	<p>【大纪元2021年08月18日讯】8月16日<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>变天，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A1%94%E5%88%A9%E7%8F%AD.md#1">塔利班</a>士兵当天进入阿富汗首都<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%96%80%E5%B8%83%E5%B0%94.md#1">喀布尔</a>，他们不仅夺取了阿富汗政府的控制权，还掌握了阿富汗大量矿藏的控制权，而这些矿产资源可以说令中共垂涎已久。</p>
+<p>如众所周知的，早在2007年11月，中共央企中国冶金科工集团<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%86%B6%E9%9B%86%E5%9B%A2.md#1">中冶集团</a>，MCC）宣布，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>政府向中冶发出了艾娜克（Aynak）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%9C%E7%9F%BF.md#1">铜矿</a>投标专案中标通知，中冶取得了艾娜克铜矿100%的矿权。</p>
+<p>公开信息显示，艾娜克是阿富汗最大、世界级特大型的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%9C%E7%9F%BF.md#1">铜矿</a>。中冶艾娜克合同写下了阿富汗最大的矿产开采协议。在此之际，值得回顾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%86%B6%E9%9B%86%E5%9B%A2.md#1">中冶集团</a>取得艾娜克铜矿的一些经过或内幕。</p>
 <p>2008年5月，中冶阿富汗艾娜克大型铜矿专案合同正式签订。2009年7月开工，按合同计划项目建设期为5年。</p>
 <p>2009年11月，阿富汗政府成立了专门打击贪污的执法部门。根据当时的外媒报导，时任阿富汗司法部长穆罕默德·伊沙克·阿洛科（Mohammed Ishaq Aloko）表示，已经以充分的证据起诉了五名部长。</p>
 <p>相关报导称，尽管阿富汗当局没有透露受查者的身份，但是关于阿富汗矿业部长穆罕默德·易卜拉欣·阿迪勒（Mohammad Ibrahim Adel）也在受查之列的猜测甚嚣尘上。阿迪勒被指在2007年12月间，接受3000万美元的贿赂金，协助中冶集团标得艾娜克大型铜矿开采项目。阿迪勒否认接受贿赂。而一位阿富汗官员透露，他们在标书评估阶段，就已经向中冶集团泄露标底了。</p>
@@ -16,7 +16,7 @@
 <p>现在阿富汗变天后，8月17日，A股三大指数均重挫超2%，沪指跌破3500点，各类股板块普跌，但是中冶集团旗下上市公司却突拉涨停，显示有市场游资炒作该公司年报信息，在矿产资源专案介绍中包含了阿富汗艾娜克铜矿项目：铜金属量达1,108 万吨，铜平均品位为1.67%，属于世界级特大型铜矿床。</p>
 <p>虽然阿富汗艾娜克铜矿藏量丰富，只是从开采状态来看，中冶集团其实根本没有正式投产，甚至可说是已经搁浅10多年的“烂尾”项目。</p>
 <p>值得一提还有，中共国资委网站这一条2017年的信息：“2007年11月20日，阿富汗政府向中冶集团发出了阿富汗艾娜克铜矿投标专案中标通知，这标志着中冶集团历经五年的艰辛努力，终于取得了在资源开发版块的重大胜利。”</p>
-<p>由此能够理解，2007年的五年前，即<ahref="https://github.com/eaxlwu3579/djy/blob/master/gb/tag/%E5%A1%94%E5%88%A9%E7%8F%AD.md#1">塔利班</a>2001年刚一倒台后，中共就迫不急待检了美国作战的果实，随即派出中冶集团和卡尔扎伊政府接触，打算拿下艾娜克铜矿。</p>
+<p>由此能够理解，2007年的五年前，即<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A1%94%E5%88%A9%E7%8F%AD.md#1">塔利班</a>2001年刚一倒台后，中共就迫不急待检了美国作战的果实，随即派出中冶集团和卡尔扎伊政府接触，打算拿下艾娜克铜矿。</p>
 <p>而今，塔利班重新夺权当政，而阿富汗前朝与中共央企被指涉嫌行贿中标的这个阿富汗最大的矿产开采协议──合同期限30年、100%的采矿权是否生变？想必也会是外界关注的一个焦点。</p>
 <p>责任编辑：高义</p>
 	
@@ -24,40 +24,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/14/4/15/n4131553.md#1">铜融资几乎垮台 中国财团却高价收购秘鲁铜矿</a></li>
-<li><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/15/9/30/n4539346.md#1">秘鲁中资铜矿流血冲突 当局宣布紧急状态</a></li>
-<li><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/15/9/30/n4539932.md#1">抗议中资铜矿 秘鲁爆冲突致4死22伤</a></li>
-<li><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/21/8/17/n13169003.md#1">王赫：塔利班再上台带给北京的是陷阱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/4/15/n4131553.md#1">铜融资几乎垮台 中国财团却高价收购秘鲁铜矿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/9/30/n4539346.md#1">秘鲁中资铜矿流血冲突 当局宣布紧急状态</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/9/30/n4539932.md#1">抗议中资铜矿 秘鲁爆冲突致4死22伤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679833.md#1">【名家专栏】击败中共 美须专注五大领域</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/29/n7787098.md#1" target="_blank">81岁病危老人一夜之间病好了</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/13/n10214702.md#1" target="_blank">中共淫乱的前生今世（1）马列斯毛</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/13/n13159580.md#1">游历地狱23分钟 美国男子著书披露见闻</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/5/26/n12976463.md#1">【金色种子】1997年李洪志大师的台湾行</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/4/23/n12899456.md#1">【命理】妇人虐死继子 自己儿子遭报应</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/15/n13163430.md#1">军机与民航机在加拿大上空目击绿色UFO</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/10/n13153445.md#1">【未解之谜】外星人就在你身边</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/17/n13168943.md#1">【直播】白宫发言人与国安顾问阿富汗简报会</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/17/n13167486.md#1">【十字路口】中共暗助塔利班 阿富汗变天警示台湾</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/17/n13167431.md#1">【有冇搞错】历史真的在重复吗？也谈阿富汗</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/13/n13160585.md#1">有关Costco 你不知道的六个秘密</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/15/n13163306.md#1">5万大陆电商被亚马逊封停 深圳急开会应对</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/13/n13160769.md#1">【时事军事】最新美国对台军售 让中共开始喊疼</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/16/n13166737.md#1">狄龙被传浴室昏厥送医 其演员儿子谭俊彦回应</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/16/n13166423.md#1">受张哲瀚事件牵连？赵薇登杂志封面被取消</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/15/n13164204.md#1">不满《尚气》被当实验品 主演呛迪士尼CEO</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/15/n13163129.md#1">《斯卡罗》选角太巧合  周厚安与角色同日生</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/16/n13165510.md#1">阿富汗女孩网上哭诉：“没人在乎我们！”</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/7/30/n13126692.md#1">水果吃过多、太少都不行 简单2招吃对份量</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/15/n13163430.md#1">军机与民航机在加拿大上空目击绿色UFO</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/12/n13157362.md#1">湿气是吃出来的 1杯茶有效排湿又养脾</a></li>
-<li><a href="https://github.com/vyguhl331/djy/blob/master/gb/21/8/15/n13163346.md#1">70岁男子在洞穴住20年 听闻疫情也去打疫苗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eaxlwu3579/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eaxlwu3579/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/18/n13170054.htm">陈思敏：中共拿下阿富汗最大铜矿项目的秘辛</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/18/n13170054.htm">陈思敏：中共拿下阿富汗最大铜矿项目的秘辛</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eaxlwu3579/djy/blob/master/gb/21/8/18/n13170054.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eaxlwu3579/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eaxlwu3579/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eaxlwu3579/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eaxlwu3579/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/8/18/n13170054.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
